--- a/FSharp.Compiler.SyntaxTreeX/FSharp.Compiler.SyntaxTreeX.fsproj
+++ b/FSharp.Compiler.SyntaxTreeX/FSharp.Compiler.SyntaxTreeX.fsproj
@@ -6,18 +6,18 @@
     <Authors>cuishengli</Authors>
     <Description>`FSharp.Compiler.SyntaxTreeX` is a subtree of `FSharp.Compiler.SyntaxTree`.</Description>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
-    <PackageReleaseNotes>first version</PackageReleaseNotes>
+    <PackageReleaseNotes>fromParseTable</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
 
     <PackageProjectUrl>https://github.com/xp44mm/FSharp.Compiler.SyntaxTreeX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/xp44mm/FSharp.Compiler.SyntaxTreeX</RepositoryUrl>
-    <PackageTags>FSharp.Compiler</PackageTags>
+    <PackageTags>FSharp;Compiler;SyntaxTree</PackageTags>
     <Company>34696643@qq.com</Company>
     <IsPublishable>True</IsPublishable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Copyright>xp44mm</Copyright>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
 
 
   </PropertyGroup>
