--- a/FSharp.Compiler.SyntaxTreeX/FSharp.Compiler.SyntaxTreeX.fsproj
+++ b/FSharp.Compiler.SyntaxTreeX/FSharp.Compiler.SyntaxTreeX.fsproj
@@ -6,7 +6,7 @@
     <Authors>cuishengli</Authors>
     <Description>`FSharp.Compiler.SyntaxTreeX` is a subtree of `FSharp.Compiler.SyntaxTree`.</Description>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
-    <PackageReleaseNotes>fromParseTable</PackageReleaseNotes>
+    <PackageReleaseNotes>update FSharp.Compiler.Service for 42.7.100</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
 
@@ -17,7 +17,7 @@
     <IsPublishable>True</IsPublishable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Copyright>xp44mm</Copyright>
-    <Version>1.0.1</Version>
+    <Version>1.0.6</Version>
 
 
   </PropertyGroup>
@@ -38,8 +38,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.Compiler.Service" Version="41.0.5" />
-    <PackageReference Include="FSharp.Literals" Version="2.2.9" />
+    <PackageReference Include="FSharp.Compiler.Service" Version="42.7.100" />
+    <PackageReference Include="FSharp.Literals" Version="2.2.11" />
   </ItemGroup>
 
 </Project>
